# 02476_project1

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  tasks.py
.devcontainer/: devcontainer.json  post_create.sh
.github/: dependabot.yaml
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
02476_project1/: tasks.py
02476_project1/.devcontainer/: devcontainer.json
02476_project1/docs/source/: index.md
configs/: config.yaml  data_evaluate.yaml  evaluation_config.yaml  sweep.yaml  sweep_bayes.yaml  sweep_grid.yaml  sweeps.yaml
dockerfiles/: api.dockerfile  train.dockerfile  train_cuda.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=9-step=4690.ckpt
models/: model.ckpt  model.pth
src/cifakeclassification/: api.py  data.py  evaluate.py  fetch_model.py  model.py  testing.py  train.py  utils.py  visualize.py
tests/: data_test.py  dependency_test.py  model_test.py  test_data.py  test_dependency.py  test_model.py
tests/apitests/: test_apis.py
tests/performancetests/: locustfile.py
