[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "cifakeclassification"
version = "0.0.1"
description = "A reproducible cifake classification model in a MLops dynamic framework"
authors = [
  { name = "Viktor H J\u00f8rgensen, Aslan D Behbahani, William Mistarz", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "locust>=2.43.1",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pytorch-lightning>=2.6.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.21.1",
    "uvicorn==0.34.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "kaggle>=1.8.3",
    "pandas>=2.3.3",
]
cpu = [
    "torch==2.6.0",
    "torchvision>=0.21.0",
]
gpu = [
    "torch==2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
  "tests/*",
  "**/_remote_module_non_scriptable.py",
  "/private/var/folders/*",
  "/var/folders/*",
  "*/site-packages/*",
]


[project.scripts]

train = "cifakeclassification.train:train"
model = "cifakeclassification.model:main"
evaluate = "cifakeclassification.evaluate:evaluate"
data = "cifakeclassification.data:app"
visualize = "cifakeclassification.visualize:app"

create_req_files = "cifakeclassification.utils:create_req_files"
